<resources>
    <string name="app_name">Shows-Franmaric</string>
    <string name="write_a_review">Write a review</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="shows">Shows</string>
    <string name="in_order_to_continue_please_log_in">In order to continue please log in.</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="remove_shows">REMOVE SHOWS</string>
    <string name="your_shows_are_not_showing_get_it">Your shows are not showing. Get it?</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name='no_permission' formatted='false'>Please check your permissions in Settings.</string>
    <string name='settings' formatted='false'>Settings</string>
    <string name="review_info">%1$d REVIEW%2$s, %3$s AVERAGE</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="_0_reviews_0_average">0 REVIEWS, 0 AVERAGE</string>
    <string name="top_rated">Top rated</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="login_failed_please_try_again">Login failed, please try again!</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="back">Back</string>
    <string name="rating_invalid">Rating invalid!</string>
    <string name="rating_must_not_be_zero">Rating must not be zero!</string>
    <string name="ok">Ok</string>
    <string name="offline_mode">· Offline mode</string>

</resources>