<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".showDetailsScreen.ShowDetailsFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="152dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:expandedTitleGravity="top"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="Title">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="?attr/homeAsUpIndicator"
                    app:titleTextColor="@color/black" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <!-- CONTENT -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    android:elevation="8dp"
                    app:cardCornerRadius="24dp">

                    <ImageView
                        android:id="@+id/showImageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:adjustViewBounds="true"
                        tools:src="@drawable/knv1" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="3sp"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp"
                    tools:text="Ovo je dugacaaaaak opis ove serije wuhuuu" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/reviews"
                    android:textColor="@color/black"
                    android:textFontWeight="700"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/reviewInfoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/_0_reviews_0_average"
                    android:textColor="#999999"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:background="@color/white"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressBackgroundTint="#EEE"
                    android:progressTint="@color/purple" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviewsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="24dp"
                    tools:listitem="@layout/view_review_item"
                    tools:visibility="gone"
                    android:nestedScrollingEnabled="false"/>

                <TextView
                    android:id="@+id/emptyStateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/no_reviews_yet"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reviewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp"
            android:backgroundTint="@color/purple"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:lineSpacingExtra="24sp"
            android:minHeight="48dp"
            android:text="@string/write_a_review"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="16sp"
            app:cornerRadius="40dp" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
